# epubgenerator

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.override.yml  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: config.py  errors.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: ai.py  books.py  chapters.py  export.py  media.py  pages.py  preview.py
backend/app/models/: __init__.py  ai.py  domain.py  dto.py
backend/app/rendering/: __init__.py  annotations.py  css.py  epub.py  html.py  pdf.py  sanitize.py
backend/app/repositories/: __init__.py  book_repository.py
backend/app/services/: __init__.py  ai_catalog.py  ai_service.py  book_service.py  chapter_service.py  export_service.py  gemini_gateway.py  media_service.py  page_service.py  tree.py
backend/tests/: conftest.py  test_ai.py  test_api.py  test_rendering.py  test_services.py
frontend/: .eslintrc.cjs  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: SortableItem.tsx
frontend/src/components/ui/: button.tsx  card.tsx  dialog.tsx  input.tsx  label.tsx  select.tsx  textarea.tsx
frontend/src/features/ai/: GenerateBookDialog.tsx  GenerateContentDialog.tsx  ModelSelect.tsx  PageAiMedia.tsx  hooks.ts
frontend/src/features/books/: BookEditorPage.tsx  BooksListPage.tsx  hooks.ts
frontend/src/features/pages/: hooks.ts  (+5 more)
frontend/src/lib/: api.ts  queryClient.ts  schemas.test.ts  schemas.ts
(+5 files in other folders)
